--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <h1 class="logo">MK<span>D</span></h1>
+        <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav>
             <ul>
             <li><a href="#hero" class="nav-link active">Home</a></li>
@@ -84,7 +85,7 @@
                 </div>
             </div>
             <div class="timeline-item">
-                <h4>HSC- SSM Lakshmi Ammal Matric Hr SEc School, Komarapalayam</h4>
+                <h4>HSC- SSM Lakshmi Ammal Matric Hr Sec School, Komarapalayam</h4>
                 <div class="timeline-content">
                     <span class="timeline-year">(2019-2020)</span>
                     <p>Percentage: 90.4</p>
