--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                     <img src="pfp.jpg" alt="Person">
                 </div>
                 <p class="testimonial-text">
-                    Hello! I’m Dharshini M K, a 3rd-year BE CSE student at Kongu Engineering College, with a CGPA of 8.41 till my 4th semester. I’m passionate about building efficient and user-friendly web applications, with a strong interest in problem-solving and software development. I love exploring the creative side of technology and enjoy experimenting with visually appealing and intuitive interfaces. Constantly eager to learn and adapt, I strive to enhance my skills and contribute to innovative, impactful projects that blend functionality with creativity.
-                </p>
+Hey! I’m Dharshini M K — a third-year Computer Science and Engineering student at Kongu Engineering College, currently holding a CGPA of 8.41 up to my 5th semester.
+I’m passionate about building efficient and user-friendly web applications, with an interest in software development. I love exploring the creative side of technology and enjoy experimenting with visually appealing and intuitive interfaces. Constantly eager to learn and adapt, I strive to enhance my skills and contribute to innovative, impactful projects that blend functionality with creativity.
+I’m currently seeking internship or full-time opportunities where I can continue growing as a developer while meaningfully contributing to the company's success through my skills and dedication.                </p>
             </div>
         </div>
     </section>
@@ -134,7 +135,7 @@
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-database"></i>
-                    <span>MySQL</span>
+                    <span>SQL</span>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-fire"></i>
@@ -153,10 +154,6 @@
                     <span>Canva</span>
                 </div>
                 <div class="skill-card">
-                    <i class="fab fa-adobe"></i>
-                    <span>Adobe Photoshop</span>
-                </div>
-                <div class="skill-card">
                     <i class="fas fa-code"></i>
                     <span>VS Code</span>
                 </div>
@@ -172,12 +169,12 @@
         <center><h1 class="section-title">Areas of Interest</h1></center>
         <div class="interests-container">
             <div class="interest-card">
-                <h3>Theory of Computation</h3>
-                <p>Passionate about automata, formal languages, and computational complexity..</p>
+                <h3>Operating Systems</h3>
+                <p>Fascinated by process scheduling, memory management, and synchronization techniques. Love decoding how systems breathe behind the scenes.</p>
             </div>
             <div class="interest-card">
-                <h3>SQL</h3>
-                <p>Skilled in database management, query optimization, and data retrieval..</p>
+                <h3>Web Designing</h3>
+                <p>Obsessed with crafting intuitive user interfaces, responsive layouts, and pixel-perfect designs. Thrive on blending creativity with code. </p>
             </div>
         </div>
     </section><br><br>
